--- a/PowerApp/DataSources/T_OKR_APP_GCI_003.json
+++ b/PowerApp/DataSources/T_OKR_APP_GCI_003.json
@@ -35,6 +35,7 @@
       "fechaProgramadaFin": "fechaProgramadaFin",
       "fechaProgramadainicio": "fechaProgramadainicio",
       "ID": "ID",
+      "lineaBase": "lineaBase",
       "metaPeriodo": "metaPeriodo",
       "Modified": "Modificado",
       "objetivoKR": "objetivoKR",
