--- a/PowerApp/Src/Pruebas Marcos.fx.yaml
+++ b/PowerApp/Src/Pruebas Marcos.fx.yaml
@@ -221,10 +221,10 @@
         BorderColor: =RGBA(245, 245, 245, 1)
         DataSource: =T_OKR_APP_GCI_003
         DefaultMode: =FormMode.New
-        Height: =497
+        Height: =587
         Width: =1114
         X: =126
-        Y: =194
+        Y: =104
         ZIndex: =12
 
         lineaBase_DataCard1 As typedDataCard.textualEditCard:
@@ -233,7 +233,7 @@
             DataField: ="lineaBase"
             Default: =ThisItem.lineaBase
             DisplayMode: =Parent.DisplayMode
-            DisplayName: =DataSourceInfo([@T_OKR_APP_GCI_003],DataSourceInfo.DisplayName,lineaBase)
+            DisplayName: ="Linea Base"
             Fill: =RGBA(0, 0, 0, 0)
             Height: =50
             MaxLength: =DataSourceInfo([@T_OKR_APP_GCI_003], DataSourceInfo.MaxLength, lineaBase)
@@ -1143,7 +1143,7 @@
             DataField: ="metaPeriodo"
             Default: =ThisItem.metaPeriodo
             DisplayMode: |
-                =If(CountIf(DataCardValue13.SelectedItems, Value = "Hito") > 0, DisplayMode.Disabled, DisplayMode.Edit)
+                =DisplayMode.Edit
             DisplayName: ="Meta Periodo"
             Fill: =RGBA(0, 0, 0, 0)
             Height: =50
@@ -1609,7 +1609,7 @@
             DisplayMode: =Parent.DisplayMode
             DisplayName: =DataSourceInfo([@T_OKR_APP_GCI_003],DataSourceInfo.DisplayName,'Datos adjuntos')
             Fill: =RGBA(0, 0, 0, 0)
-            Height: =
+            Height: =166
             Required: =false
             Update: =DataCardValue29.Attachments
             Width: =371
@@ -1718,21 +1718,4 @@
                 Wrap: =false
                 Y: =DataCardKey16.Y
                 ZIndex: =4
-
-    TextCanvas1 As Texto:
-        Align: ='TextCanvas.Align'.Center
-        AutoHeight: =false
-        DisplayMode: =DisplayMode.Edit
-        Font: =Font.'Segoe UI'
-        FontColor: =RGBA(238, 44, 112, 1)
-        Height: =109
-        PaddingTop: =
-        Size: =70
-        Text: ="Registrar KR"
-        VerticalAlign: ='TextCanvas.VerticalAlign'.Top
-        Weight: ='TextCanvas.Weight'.Semibold
-        Width: =1115
-        X: =125
-        Y: =100
-        ZIndex: =13
 
