--- a/PowerApp/DataSources/T_TAREAS_APP_GCI_003.json
+++ b/PowerApp/DataSources/T_TAREAS_APP_GCI_003.json
@@ -30,6 +30,7 @@
       "descripcionTarea": "descripcionTarea",
       "Editor": "Modificado por",
       "Editor#Claims": "Modificado por Claims",
+      "finalizado": "finalizado",
       "ID": "ID",
       "Modified": "Modificado",
       "nombreKRAsociado": "nombreKRAsociado",
