--- a/PowerApp/Src/Confirmacion.fx.yaml
+++ b/PowerApp/Src/Confirmacion.fx.yaml
@@ -1,31 +1,21 @@
 "Confirmacion As screen.'tabletLayout_Success_ver3.0'":
-    LoadingSpinnerColor: =RGBA(0, 120, 212, 1)
+    Fill: =Color.White
+    LoadingSpinnerColor: =App.Theme.Colors.Primary
 
     Image5_1 As image:
-        BorderColor: =RGBA(0, 0, 0, 0)
-        BorderStyle: =BorderStyle.None
-        BorderThickness: =2
-        DisabledBorderColor: =RGBA(0, 0, 0, 0)
-        DisabledFill: =RGBA(0, 0, 0, 0)
-        FocusedBorderThickness: =4
+        BorderColor: =App.Theme.Colors.Darker40
+        DisabledBorderColor: =RGBA(166, 166, 166, 1)
+        DisabledFill: =RGBA(244, 244, 244, 1)
         Height: =768
-        HoverBorderColor: =RGBA(0, 0, 0, 0)
-        HoverFill: =RGBA(0, 0, 0, 0)
         Image: =Torito
         ImagePosition: =ImagePosition.Fill
-        PressedBorderColor: =RGBA(0, 0, 0, 0)
-        PressedFill: =RGBA(0, 0, 0, 0)
         Width: =1366
         ZIndex: =1
 
     Rectangle3_1 As rectangle:
         AccessibleLabel: =
-        BorderColor: =RGBA(0, 0, 0, 0)
-        BorderStyle: =BorderStyle.None
-        BorderThickness: =2
-        DisabledFill: =RGBA(161, 159, 157, 1)
+        BorderColor: =App.Theme.Colors.Darker40
         Fill: =RGBA(0,0,0,0.3)
-        FocusedBorderThickness: =4
         Height: =668
         HoverFill: =RGBA(0, 0, 0, 0.3)
         PressedFill: =
@@ -34,31 +24,26 @@
         ZIndex: =2
 
     iconCircle1 As circle.Circle:
-        BorderColor: =RGBA(245, 245, 245, 1)
-        BorderStyle: =BorderStyle.None
-        BorderThickness: =2
-        DisabledFill: =RGBA(0, 120, 212, 1)
-        Fill: =RGBA(0, 120, 212, 1)
+        BorderColor: =App.Theme.Colors.Darker40
+        Fill: =App.Theme.Colors.Primary
         Height: =128
-        HoverFill: =RGBA(0, 120, 212, 1)
-        PressedFill: =RGBA(0, 120, 212, 1)
         Width: =134
         X: =599
         Y: =172
         ZIndex: =3
 
     iconCheck1 As icon.Check:
-        BorderColor: =RGBA(0, 0, 0, 0)
+        BorderColor: =App.Theme.Colors.Darker40
         Color: =RGBA(255, 255, 255, 1)
-        DisabledBorderColor: =RGBA(0, 0, 0, 0)
-        DisabledColor: =RGBA(225, 223, 221, 1)
+        DisabledBorderColor: =RGBA(166, 166, 166, 1)
+        DisabledColor: =RGBA(244, 244, 244, 1)
         Height: =127
         Icon: =Icon.Check
         PaddingBottom: =Self.PaddingTop
         PaddingLeft: =Self.PaddingTop
         PaddingRight: =Self.PaddingTop
         PaddingTop: =24
-        PressedFill: =RGBA(0, 0, 0, 0)
+        PressedFill: =RGBA(255, 255, 255, 0.3)
         Width: =134
         X: =599
         Y: =172
@@ -67,8 +52,8 @@
     LblSuccessMsg1 As label:
         Align: =Align.Center
         Color: =RGBA(255, 255, 255, 1)
-        DisabledColor: =RGBA(161, 159, 157, 1)
-        Font: =Font.'Segoe UI'
+        DisabledColor: =RGBA(166, 166, 166, 1)
+        Font: =App.Theme.Font
         Height: =54
         Size: =30
         Text: ="Se registró correctamente el KR"
@@ -83,19 +68,20 @@
             =BorderStyle.Solid
             
         BorderThickness: =4
-        DisabledBorderColor: =RGBA(0, 0, 0, 0)
-        DisabledColor: =RGBA(161, 159, 157, 1)
-        DisabledFill: =RGBA(242, 242, 241, 0)
+        Color: =App.Theme.Colors.PrimaryForeground
+        DisabledBorderColor: =RGBA(244, 244, 244, 1)
+        DisabledColor: =RGBA(166, 166, 166, 1)
+        DisabledFill: =RGBA(244, 244, 244, 1)
         Fill: =RGBA(238,40,122,0.9)
         FontWeight: =FontWeight.Semibold
-        HoverBorderColor: =RGBA(0, 0, 0, 0)
+        HoverBorderColor: =App.Theme.Colors.Darker10
         HoverColor: =Color.White
         HoverFill: |-
             =ColorValue("#EE2C70")
         OnSelect: =Navigate(Home)
-        PressedBorderColor: =RGBA(0, 69, 120, 1)
-        PressedColor: =RGBA(255, 255, 255, 1)
-        PressedFill: =RGBA(16, 110, 190, 1)
+        PressedBorderColor: =App.Theme.Colors.Darker40
+        PressedColor: =Self.Color
+        PressedFill: =App.Theme.Colors.Darker40
         RadiusBottomLeft: =08
         RadiusBottomRight: =08
         RadiusTopLeft: =08
@@ -112,19 +98,20 @@
             =BorderStyle.Solid
             
         BorderThickness: =4
-        DisabledBorderColor: =RGBA(0, 0, 0, 0)
-        DisabledColor: =RGBA(161, 159, 157, 1)
-        DisabledFill: =RGBA(242, 242, 241, 0)
+        Color: =App.Theme.Colors.PrimaryForeground
+        DisabledBorderColor: =RGBA(244, 244, 244, 1)
+        DisabledColor: =RGBA(166, 166, 166, 1)
+        DisabledFill: =RGBA(244, 244, 244, 1)
         Fill: =RGBA(238,40,122,0.9)
         FontWeight: =FontWeight.Semibold
-        HoverBorderColor: =RGBA(0, 0, 0, 0)
+        HoverBorderColor: =App.Theme.Colors.Darker10
         HoverColor: =Color.White
         HoverFill: |-
             =ColorValue("#EE2C70")
         OnSelect: =Navigate('Pruebas Marcos_1')
-        PressedBorderColor: =RGBA(0, 69, 120, 1)
-        PressedColor: =RGBA(255, 255, 255, 1)
-        PressedFill: =RGBA(16, 110, 190, 1)
+        PressedBorderColor: =App.Theme.Colors.Darker40
+        PressedColor: =Self.Color
+        PressedFill: =App.Theme.Colors.Darker40
         RadiusBottomLeft: =08
         RadiusBottomRight: =08
         RadiusTopLeft: =08
@@ -137,31 +124,19 @@
         ZIndex: =8
 
     Rectangle1_3 As rectangle:
-        BorderColor: =RGBA(0, 0, 0, 0)
-        BorderStyle: =BorderStyle.None
-        BorderThickness: =2
-        DisabledFill: =RGBA(161, 159, 157, 1)
+        BorderColor: =App.Theme.Colors.Darker40
         Fill: =RGBA(0, 153, 204, 1)
-        FocusedBorderThickness: =4
         HoverFill: |-
             =ColorValue("#0099CC")
-        PressedFill: =RGBA(0, 120, 212, 1)
         Width: =1366
         ZIndex: =9
 
     Image3_3 As image:
-        BorderColor: =RGBA(0, 0, 0, 0)
-        BorderStyle: =BorderStyle.None
-        BorderThickness: =2
-        DisabledBorderColor: =RGBA(0, 0, 0, 0)
-        DisabledFill: =RGBA(0, 0, 0, 0)
-        FocusedBorderThickness: =4
+        BorderColor: =App.Theme.Colors.Darker40
+        DisabledBorderColor: =RGBA(166, 166, 166, 1)
+        DisabledFill: =RGBA(244, 244, 244, 1)
         Height: =70
-        HoverBorderColor: =RGBA(0, 0, 0, 0)
-        HoverFill: =RGBA(0, 0, 0, 0)
         Image: ='Logo-pacifico-blanco'
-        PressedBorderColor: =RGBA(0, 0, 0, 0)
-        PressedFill: =RGBA(0, 0, 0, 0)
         Width: =304
         X: =125
         Y: =15
@@ -170,8 +145,8 @@
     LblSuccessMsg1_1 As label:
         Align: =Align.Center
         Color: =RGBA(255, 255, 255, 1)
-        DisabledColor: =RGBA(161, 159, 157, 1)
-        Font: =Font.'Segoe UI'
+        DisabledColor: =RGBA(166, 166, 166, 1)
+        Font: =App.Theme.Font
         Height: =54
         Size: =30
         Text: =VarNombre
