--- a/PowerApp/Src/Power_BI.fx.yaml
+++ b/PowerApp/Src/Power_BI.fx.yaml
@@ -1,3 +1,4 @@
 Power_BI As screen:
-    LoadingSpinnerColor: =RGBA(0, 120, 212, 1)
+    Fill: =Color.White
+    LoadingSpinnerColor: =App.Theme.Colors.Primary
 
