--- a/PowerApp/Src/Screen3.fx.yaml
+++ b/PowerApp/Src/Screen3.fx.yaml
@@ -196,6 +196,7 @@
         Title3 As label:
             Color: =RGBA(50, 49, 48, 1)
             DisabledColor: =RGBA(166, 166, 166, 1)
+            DisplayMode: =DisplayMode.View
             Font: =App.Theme.Font
             FontWeight: =If(ThisItem.IsSelected, FontWeight.Semibold, FontWeight.Normal)
             Height: =Self.Size * 1.8
@@ -242,7 +243,7 @@
             PaddingRight: =0
             PaddingTop: =0
             Size: =12
-            Text: =ThisItem.fechaProgramadainicio
+            Text: =ThisItem.'Creado por'.Department
             VerticalAlign: =VerticalAlign.Top
             Width: =Title3.Width
             X: =Title3.X
